[package]
name = "multitool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["blocking"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha256 = "1.5.0"
